# openai-chatkit-advanced-samples

examples/knowledge-assistant/: WARP.md  chat-element.txt
examples/knowledge-assistant/backend/app/: assistant_agent.py  main.py  memory_store.py
examples/knowledge-assistant/backend/app/data/: 01_fomc_statement_2025-09-17.html  02_implementation_note_2025-09-17.html  04_sep_tables_2025-09-17.html
examples/knowledge-assistant/frontend/src/components/: ChatKitPanel.tsx  KnowledgeDocumentsPanel.tsx  ThinkingTimer.tsx  TimeBadge.tsx
examples/marketing-assets/: CHECKLIST.md  CRAWLER_SETUP.md  IMPLEMENTATION_SUMMARY.md  README.md  test_crawler.py
examples/marketing-assets/backend/: README.md  pyproject.toml  storage.sqlite  storage.sqlite-shm  storage.sqlite-wal
examples/marketing-assets/backend/app/: chat.py  constants.py  crawl_service.py  main.py  persistence.py  sqlite_store.py  universal_crawler.py
examples/marketing-assets/backend/static/images/: .gitignore
examples/marketing-assets/crawler/: README.md  get_result.py  main.py  requirements.txt  send_job.py  test_navigate.py
examples/marketing-assets/frontend/: vite.config.ts
examples/marketing-assets/frontend/src/components/: AdAssetCard.tsx  ChatKitPanel.tsx  HistoryPanel.tsx  Home.tsx
examples/marketing-assets/frontend/src/hooks/: useHistory.ts
examples/marketing-assets/frontend/src/lib/: config.ts
frontend/: package-lock.json  package.json
